# blueshell-dns

./: .gitignore  LICENSE  README.md  dnsinfo.py  setup.cfg
dnsinfo/: __init__.py  dnsinfo.py
