[metadata]
name = dnsinfo
version = 0.0.1
description = DNS Information
long_description = file:README.md
long_description_content_type = text/markdown
license = GPL
classifier = 
    License :: OSI Approved :: GPL License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts =
   dnsinfo = dnsinfo:main
