[metadata]
name = dnsinfo
version = 0.0.1
description = DNS Information
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
classifier = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    dnspython==2.4.2

[options.entry_points]
console_scripts =
   dnsinfo = dnsinfo:main
